changed names descrip to ctomixers

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mybueproto",
+  "name": "ctomixers",
   "version": "1.0.0",
-  "description": "Nuxt.js project",
+  "description": "CTO Mixers project",
   "author": "Mario Noble <mario@contextmultimedia.com>",
   "private": true,
   "scripts": {
